# VolumeEngine

./: .clang-format  .editorconfig  license  meson.build  readme.md
assets/engine/shaders/: basic.frag  basic.vert  debug_line.frag  debug_line.vert  post.frag  shadow.frag  shadow.vert  ui.frag  ui.vert
assets/game/maps/: test.volmap
assets/maps/: test.volmap
assets/materials/: floor.volmat  test_cube.volmat
assets/shaders/: basic.frag  basic.vert  blur.frag  blur.vert  post.frag
assets/textures/: checker.ppm
examples/: meson.build
examples/sandbox/: main.c  meson.build
libs/stb/: stb_image.h
scripts/: stage-assets.pl
src/: engine.c  engine.h  main.c  volume.c  volume.h
src/asset/: manager.c  manager.h  material_loader.c  material_loader.h  mesh_loader.c  mesh_loader.h
src/collision/: aabb.c  aabb.h  box_collider.c  box_collider.h  collider.c  collider.h  collision_world.c  collision_world.h  triangle.c  triangle.h  triangle_mesh_collider.c  triangle_mesh_collider.h
src/core/: log.c  log.h  path.c  path.h  types.h
src/debug/: debug_draw.c  debug_draw.h  debug_ui.c  debug_ui.h  hud.c  hud.h
src/entity/: builtin.c  builtin.h  entity.c  entity.h  func_button.c  func_button.h  func_door.c  func_door.h  func_ladder.c  func_ladder.h  info_player_start.c  info_player_start.h  io.c  io.h  light_environment.c  light_environment.h  logic_auto.c  logic_auto.h  logic_relay.c  logic_relay.h  mover.c  mover.h  player.c  player.h  prop.h  prop_dynamic.c  prop_dynamic.h  prop_internal.h  prop_static.c  prop_static.h  properties.c  properties.h  trigger.c  trigger.h  world.c  world.h
src/game/: game.c  game.h
src/input/: input.c  input.h
src/map/: keyvalues.c  keyvalues.h  map.c  map.h  spawn.c  spawn.h
src/math/: mat4.c  mat4.h  math.h  vec3.c  vec3.h
src/physics/: character_controller.c  character_controller.h
src/platform/: platform.c  platform.h
src/renderer/: bloom_buffer.c  bloom_buffer.h  hdr_buffer.c  hdr_buffer.h  material.c  material.h  mesh.c  mesh.h  renderer.c  renderer.h  shader.c  shader.h  shadow_map.c  shadow_map.h  texture.c  texture.h  ui_renderer.c  ui_renderer.h  view.h
src/scene/: camera.c  camera.h  transform.c  transform.h
tests/: aabb_test.c  asset_manager_test.c  collider_test.c  collision_world_test.c  common.c  common.h  debug_hud_test.c  entity_io_test.c  entity_parent_test.c  func_button_test.c  func_door_test.c  info_player_start_test.c  keyvalues_test.c  map_spawn_test.c  map_test.c  material_loader_test.c  meson.build  mover_test.c  player_test.c  prop_static_collision_test.c  trigger_test.c
tests/fixtures/: basic.volmap  basic.volmat
